--- a/src/pages/sty.css
+++ b/src/pages/sty.css
@@ -76,14 +76,12 @@ form{
      
     justify-content: center;
    
-    position: absolute;
+    position: relative;
     transform: translate(-50%,-50%);
 
-    top: 60%;
+    top: 40%;
     left: 50%;
-    box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
-  border: 2px solid rgba(255,255,255,0.1);
-  backdrop-filter: blur(10px);
+   
   
     
     
@@ -145,11 +143,9 @@ input{
 ::placeholder{
     color: #e5e5e5;
 }
-button{
+.buttonn{
     height: 50px;
-    width: 120%;
-   
-    
+    width: 120%;  
     padding: 15px 0;
     font-size: 18px;
     margin-top: 18px;
@@ -228,3 +224,22 @@ margin: 10px 20px;
 padding: 20px;
 font-size: 2rem;
 }
+.box {
+ size: 1;
+}
+
+.box select {
+  background-color: #e2a541;;
+  color: white;
+  padding: 12px;
+  width: 190px;
+  border: none;
+  font-size: 20px;
+  border-radius: 10px;
+  -webkit-appearance: button;
+  appearance: button;
+  outline: none;
+}
+
+
+
