--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -94,6 +94,16 @@ p {
     justify-content: space-around;
     padding: 0px 0px 50px 0px ;
 }
+.avtt{
+    
+    z-index: 1; 
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding: 10px 0px 0px 0px ;
+}
 /*#background-video {
     width: 100vw;
     height: 100vh;
